--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -99,3 +99,53 @@
     transform: translateX(-100%);
   }
 }
+
+.card {
+  position: relative;
+  width: 300px;
+  height: 200px;
+  border-radius: 10px;
+  transition: 0.3s;
+  padding: 30px 50px;
+  background: #fff;
+  cursor: pointer;
+  overflow: hidden;
+  margin-right: 30px;
+}
+
+.card:hover {
+  height: 300px;
+  padding: 10px;
+}
+
+.imgbox {
+  width: 100%;
+  height: 100%;
+  /* transform: translateY(-80px); */
+  z-index: 99;
+}
+
+.cardImage {
+  width: 100%;
+  height: 100%;
+  z-index: 99;
+  /* box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.5); */
+}
+
+.content {
+  transform: translateY(-450px);
+  transition: 0.3s;
+  display: none;
+}
+
+.card:hover > .content {
+  transition: 0.3s;
+  display: block;
+  transform: translateY(-20px);
+}
+.card:hover > .imgbox {
+  width: 40%;
+  height: 40%;
+  transform: scale(0.5);
+  transition: 0.3s;
+}
