--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -149,3 +149,11 @@
   transform: scale(0.5);
   transition: 0.3s;
 }
+.slide-fade {
+  transition: opacity 0.5s ease-in-out;
+  opacity: 0;
+}
+
+.slide-fade.active {
+  opacity: 1;
+}
