--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,7 @@
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.9%;
     --primary: 47.9 95.8% 53.1%;
+    /* --primary: 72, 100%, 71%; */
     --primary-foreground: 355.7 100% 97.3%;
     --secondary: 240 4.8% 95.9%;
     --secondary-foreground: 240 5.9% 10%;
