--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -107,7 +107,7 @@
   height: 200px;
   border-radius: 10px;
   transition: 0.3s;
-  padding: 30px 50px;
+  padding: 30px 20px;
   background: #fff;
   cursor: pointer;
   overflow: hidden;
@@ -115,14 +115,14 @@
 }
 
 .card:hover {
-  height: 300px;
+  width: 400px;
+  height: 450px;
   padding: 10px;
 }
 
 .imgbox {
   width: 100%;
   height: 100%;
-  /* transform: translateY(-80px); */
   z-index: 99;
 }
 
@@ -130,7 +130,8 @@
   width: 100%;
   height: 100%;
   z-index: 99;
-  /* box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.5); */
+  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
 }
 
 .content {
@@ -145,9 +146,9 @@
   transform: translateY(-20px);
 }
 .card:hover > .imgbox {
-  width: 40%;
-  height: 40%;
-  transform: scale(0.5);
+  width: 100%;
+  height: 30%;
+  transform: scale(1.5);
   transition: 0.3s;
 }
 .slide-fade {
